# ssciwr_stat_analysis

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/source/: conf.py  get_numerics.rst  get_statistics.rst  index.rst  modules.rst  snapy_io.rst
notebook/: notebook_unit1.ipynb
snapppy/: __init__.py  get_numerics.py  get_statistics.py  plotting.py  snapy_io.py
snapppy/tests/: test_simple_plot_pytest.py
snapy/: get_numerics.py  get_statistics.py  main.py  plotting.py  snapy_io.py
tests/: test_stastics.py
